src/CSBill/CoreBundle/Resources/public/less/theme.less
html, body {
    height: 100%;
}

body {
    height: 100%;
    padding-top: 50px;
}

/**
 * BUTTONS
 */
.btn {
    &-default,
    &-primary,
    &-success,
    &-info,
    &-warning,
    &-danger {
        text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
        .box-shadow(inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075););

        &:active,
        &.active {
            .box-shadow(inset 0 3px 5px rgba(0, 0, 0, 0.125));
        }
    }

    &:active,
    &.active {
        background-image: none;
    }

    &-default {
        text-shadow: 0 1px 0 #fff;
        #gradient > .vertical(#ffffff, #e0e0e0, 0%, 100%);
        border-color: #dbdbdb;

        &:hover,
        &:focus {
            background-color: #e0e0e0;
            background-position: 0 -15px;
        }

        &:active,
        &.active {
            background-color: #e0e0e0;
            border-color: #dbdbdb;
        }
    }

    &-primary {
        #gradient > .vertical(#428bca, #2d6ca2, 0%, 100%);
        border-color: #2b669a;

        &:hover,
        &:focus {
            background-color: #2d6ca2;
            background-position: 0 -15px;
        }

        &:active,
        &.active {
            background-color: #2d6ca2;
            border-color: #2b669a;
        }
    }

    &-success {
        #gradient > .vertical(#5cb85c, #419641, 0%, 100%);
        border-color: #3e8f3e;

        &:hover,
        &:focus {
            background-color: #419641;
            background-position: 0 -15px;
        }

        &:active,
        &.active {
            background-color: #419641;
            border-color: #3e8f3e;
        }
    }

    &-warning {
        #gradient > .vertical(#f0ad4e, #eb9316, 0%, 100%);
        border-color: #e38d13;

        &:hover,
        &:focus {
            background-color: #eb9316;
            background-position: 0 -15px;
        }

        &:active,
        &.active {
            background-color: #eb9316;
            border-color: #e38d13;
        }
    }

    &-danger {
        #gradient > .vertical(#d9534f, #c12e2a, 0%, 100%);
        border-color: #b92c28;

        &:hover,
        &:focus {
            background-color: #c12e2a;
            background-position: 0 -15px;
        }

        &:active,
        &.active {
            background-color: #c12e2a;
            border-color: #b92c28;
        }
    }

    &-info {
        #gradient > .vertical(#5bc0de, #2aabd2, 0%, 100%);
        border-color: #28a4c9;

        &:hover,
        &:focus {
            background-color: #2aabd2;
            background-position: 0 -15px;
        }

        &:active,
        &.active {
            background-color: #2aabd2;
            border-color: #28a4c9;
        }
    }
}

/**
 * THUMBNAIL
 */
.thumbnail,
.img-thumbnail {
    .box-shadow(0 1px 2px rgba(0, 0, 0, 0.075));
}

/**
 * DROPDOWN MENU
 */
.dropdown-menu {
    > li {
        > a {
            &:hover,
            &:focus {
                background-color: #e8e8e8;
                #gradient > .vertical(#f5f5f5, #e8e8e8, 0%, 100%);
            }
        }
    }

    &.active {
        > a {
            &:hover,
            &:focus {
                background-color: #357ebd;
                #gradient > .vertical(#428bca, #357ebd, 0%, 100%);
            }
        }
    }
}

/**
 * NAV
 */
.navbar {

    margin-bottom: auto;

    &-default {
        #gradient > .vertical(#ffffff, #f8f8f8, 0%, 100%);
        border-radius: 4px;
        .box-shadow(inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 5px rgba(0, 0, 0, 0.075););

        .navbar-nav > .active > a {
            #gradient > .vertical(#ebebeb, #ebebeb, 0%, 100%);
            .box-shadow(inset 0 3px 9px rgba(0, 0, 0, 0.075));
        }
    }

    &-brand,
    &-nav > li > a {
        text-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
    }

    &-inverse {
        #gradient > .vertical(#3F3F3F, #222222, 0%, 100%);

        .navbar-nav {
            > .active > a {
                #gradient > .vertical(#222222, #282828, 0%, 100%);
                .box-shadow(inset 0 3px 9px rgba(0, 0, 0, 0.25));
            }

            > li > a {
                text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
            }
        }

        .navbar-brand {
            text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
        }
    }

    &-static-top,
    &-fixed-top,
    &-fixed-bottom {
        border-radius: 0;
    }
}

.nav {
    > li {
        > a {
            &.filter-header {
                &:hover {
                    background: none;
                    cursor: default;
                }
            }
        }
    }

    .nav-header {
        color: #FFF;
        padding: 10px 15px;
        font-weight: bold;
        background: #3F3F3F;
    }
}

/**
 * ALERT
 */
.alert {
    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
    .box-shadow(inset 0 1px 0 rgba(255, 255, 255, 0.25), 0 1px 2px rgba(0, 0, 0, 0.05););

    &-success {
        #gradient > .vertical(#dff0d8, #c8e5bc, 0%, 100%);
        border-color: #b2dba1;
    }

    &-info {
        #gradient > .vertical(#d9edf7, #b9def0, 0%, 100%);
        border-color: #9acfea;
    }

    &-warning {
        #gradient > .vertical(#fcf8e3, #f8efc0, 0%, 100%);
        border-color: #f5e79e;
    }

    &-danger {
        #gradient > .vertical(#f2dede, #e7c3c3, 0%, 100%);
        border-color: #dca7a7;
    }
}

/**
 * PROGRESS
 */
.progress {
    #gradient > .vertical(#ebebeb, #f5f5f5, 0%, 100%);

    &-bar {
        #gradient > .vertical(#428bca, #3071a9, 0%, 100%);

        &-success {
            #gradient > .vertical(#5cb85c, #449d44, 0%, 100%);
        }

        &-info {
            #gradient > .vertical(#5bc0de, #31b0d5, 0%, 100%);
        }

        &-warning {
            #gradient > .vertical(#f0ad4e, #ec971f, 0%, 100%);
        }

        &-danger {
            #gradient > .vertical(#d9534f, #c9302c, 0%, 100%);
        }
    }
}

/**
 * LIST GROUP
  */
.list-group {
    border-radius: 4px;
    .box-shadow(0 1px 2px rgba(0, 0, 0, 0.075));

    &-item {
        &.active {
            &:hover,
            &focus {
                text-shadow: 0 -1px 0 #3071a9;
                #gradient > .vertical(#428bca, #3278b3, 0%, 100%);
                border-color: #3278b3;
            }
        }
    }
}

/**
 * PANELS
 */
.panel {
    .box-shadow(0 1px 2px rgba(0, 0, 0, 0.05));

    &-default {
        > .panel-heading {
            #gradient > .vertical(#f5f5f5, #e8e8e8, 0%, 100%);
        }
    }

    &-primary {
        > .panel-heading {
            #gradient > .vertical(#428bca, #357ebd, 0%, 100%);
        }
    }

    &-success {
        > .panel-heading {
            #gradient > .vertical(#dff0d8, #d0e9c6, 0%, 100%);
        }
    }

    &-info {
        > .panel-heading {
            #gradient > .vertical(#d9edf7, #c4e3f3, 0%, 100%);
        }
    }

    &-warning {
        > .panel-heading {
            #gradient > .vertical(#fcf8e3, #faf2cc, 0%, 100%);
        }
    }

    &-danger {
        > .panel-heading {
            #gradient > .vertical(#f2dede, #ebcccc, 0%, 100%);
        }
    }
}

/**
 * MISC
 */
.well {
    #gradient > .vertical(#e8e8e8, #f5f5f5, 0%, 100%);
    border-color: #dcdcdc;
    .box-shadow(inset 0 1px 3px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(255, 255, 255, 0.1););
}



/**
 * LAYOUT STYLE
 */

.content {
    margin-top:  20px;
}

.container {
    height: 100%;
    > .row {
        height: 100%;
        aside {
            height: 100%;
        }
    }
}

.left-sidebar {
    background-color: #666666;
    border-color: @navbar-inverse-border;
    padding: 20px 0 0 0;
    position: fixed;

    .nav {
        border-top: 1px solid #4A4A4A;
        border-bottom: 1px solid #858585;

        li {
            border-top: 1px solid #858585;
            border-bottom: 1px solid #4A4A4A;

            > a {
                border-radius: 0;
                color: #FFFFFF;
                &:hover {
                    background: #616161;
                }
            }

            &.active {
                > a {
                    background: #FFFFFF;
                    color: #428BCA;
                    font-weight: bold;
                }
            }
        }
    }
}

/**
 * Header
 */

.page-heading {

    margin-left: -5px;
    margin-right: -28px;

    legend {
        #gradient > .vertical(#ffffff, #eeeeee, 0%, 100%);
        border-bottom: 1px solid #cccccc;
        margin-left: -10px;
        padding: 0px 0px 10px 10px;

        h3 {
            font-weight: normal;
            color: #2679B5;
            font-size: 25px;
            font-style: italic;
        }
    }
}

.header-button {
    margin-right: 20px;
}

